<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/action_stats"
        android:title="@string/stats"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_manage_categories"
        android:title="@string/manage_categories"
        android:icon="@android:drawable/ic_menu_manage"
        app:showAsAction="never" />
    <!-- Màn Ngân sách -->
    <item
        android:id="@+id/action_budget"
        android:title="@string/budget"
        app:showAsAction="never" />

</menu>
